--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -27,7 +27,8 @@ services:
       - ./backend/src:/app/src
       - ./backend/node_modules:/app/node_modules
     depends_on:
-      - db
+      db:
+        condition: service_healthy
 
   db:
     image: mysql:8.0
@@ -40,6 +41,10 @@ services:
       - MYSQL_PASSWORD=your_db_password
     volumes:
       - db_data:/var/lib/mysql
+    healthcheck:
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
+      interval: 10s
+      retries: 5
 
 volumes:
   db_data:
